--- a/index.html
+++ b/index.html
@@ -1,55 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
-    <title>Unit Converter</title>
-
-    <link rel="stylesheet" type="text/css" href="style.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stopwatch</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
     <div class="container">
-        <h1>UNIT CONVERTER</h1>
-
-        <form name="property_form">
-            <span>
-                <select class="select-property" name="the_menu" size=1
-                    onChange="UpdateUnitMenu(this, document.form_A.unit_menu); UpdateUnitMenu(this, document.form_B.unit_menu)">
-                </select>
-            </span>
-        </form>
-
-        <div class="row">
-            <div class="col">
-                <form name="form_A" onSubmit="return false">
-                    <input type="text" class="numbersonly" name="unit_input" maxlength="20" value="0"
-                        onKeyUp="CalculateUnit(document.form_A, document.form_B)">
-                    <span>
-                        <select name="unit_menu" onChange="CalculateUnit(document.form_B, document.form_A)">
-                        </select>
-                    </span>
-                </form>
-            </div>
-
-            <div class="col">
-                <form name="form_B" onSubmit="return false">
-                    <input type="text" class="numbersonly" name="unit_input" maxlength="20" value="0"
-                        onkeyup="CalculateUnit(document.form_B, document.form_A)">
-                    <span>
-                        <select name="unit_menu" onChange="CalculateUnit(document.form_A, document.form_B)">
-                        </select>
-                    </span>
-                </form>
-            </div>
+        <div class="wrapper">
+            <p>
+                <span class="mins">00</span>:<span class="seconds">00</span>:<span class="tens">00</span>
+            </p> <br>
+            <button class="btn-start">Start</button>
+            <button class="btn-stop">Stop</button>
+            <button class="btn-reset">Reset</button>
         </div>
-
     </div>
-
-    <script type="text/javascript" src="main.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
